[package]
name = "sindri-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
axum = { version = "0.8", features = ["default", "macros"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = "1.0"
sindri-core = { workspace = true }
